--- a/ue_app/templates/main/article_detail.html
+++ b/ue_app/templates/main/article_detail.html
@@ -7,81 +7,85 @@
 
 {% block content %}
 {% load social_share %}
-
-<div class="article-detail-container">
-    
-    <div class="properties-articles">
-        <div class="article-title">
-            <h1>{{article.title}}</h1>
-        </div>
-        <hr>
-        <div class="article-attribute-container">
-            <div class="article-attr">
-                <div class="channel-name">
-                    <a href="{{article.author.get_absolute_url}}"><img src="{{article.author.channel_logo.url}}" alt=""><a/>
-                    <p>{{article.author.display_name}}</p>
+<div class="content-container">
+    <div class="content-page">
+        <div class="article-detail-container">
+            <div class="properties-articles">
+                <div class="article-title">
+                    <h1>{{article.title|title}}</h1>
                 </div>
-                <div class="date-posted views">
-                    <box-icon class="attr" name='calendar'></box-icon>
-                    <p><span>{{ article.date_uploaded|timesince|upto:',' }} ago</span></p>
-                </div>
-                <div class="read-time views">
-                    <box-icon class="attr" name='time-five'></box-icon>
-                    <p><span>{{ article.read_time }} min{{ article.read_time|pluralize }} read</span></p>
-                </div>
-                <div class="count-words views">
-                    <box-icon class="attr" name='book-content'></box-icon>
-                    <p><span>{{ article.count_words }} word{{ article.count_words|pluralize }}</span></p>
-                </div>
-                <div class="views">
-                    <img src="{% static 'images/icons/eye_60px.png' %}" alt="">
-                    <p> <span>{{ article.views }} view{{ article.views|pluralize }}</span></p>
-                </div>
-            </div>
-            <div class="article-attr">
-                <div class="channel-name actions">
-                    <a class="like-btn" data-href="{{article.get_api_like_url}}" data-likes="{{article.likes.count}}" href="{{article.get_like_url}}">
-                        {% if article.already_liked %}
-                        <box-icon name='like' type="solid" animation='tada-hover'></box-icon>
-                        {% else %}
-                        <box-icon name='like' animation='tada-hover'></box-icon>
-                        {% endif %}
-                    </a>
-                    <p class="likes-count">{{article.likes.count}}</p>
-                </div>
-                <div class="date-posted actions share-container">
-                    <box-icon class="share-btn" name='share-alt'></box-icon>
-                    <div class="social-share-container">
-                        <div onclick = 'cancelShare()' class="cancel-share"><box-icon name='x'></box-icon></div>
-                        {% post_to_facebook "Check out my story!" %}
-                        {% post_to_twitter "Check out my story!" '{{article.get_absolute_url}}' "Share on Twitter" %}
-                        {% post_to_gplus '{{article.get_absolute_url}}' "Share on Google+!" %}
-                        {% post_to_linkedin  '{{article.get_absolute_url}}' %}
-                        {% send_email "Check out my story!" '{{article.get_absolute_url}}' "Share via email" %}
-                        {% post_to_reddit "Check out my story!" '{{article.get_absolute_url}}' %}
-                        {% post_to_telegram "Check out my story!" '{{article.get_absolute_url}}' %}
-                        {% post_to_whatsapp "Check out my story!" "Share on WhatsApp" %}
-                        {% save_to_pinterest '{{article.get_absolute_url}}' %}
-                        {% add_pinterest_script %}
-                        {% copy_to_clipboard '{{article.get_absolute_url}}' "Copy to clipboard!" %}
-                        {% add_copy_script %}
+                <hr>
+                <div class="article-attribute-container">
+                    <div class="article-attr">
+                        <div class="channel-name">
+                            <a href="{{article.author.get_absolute_url}}"><img src="{{article.author.channel_logo.url}}" alt=""></a>
+                            <p>{{article.author.display_name}}</p>
+                        </div>
+                    </div>
+                    <div class="article-attr">
+                        
+                        <div class="date-posted views">
+                            <box-icon class="attr" name='calendar'></box-icon>
+                            <p><span>{{ article.date_uploaded|timesince|upto:',' }} ago</span></p>
+                        </div>
+                        <div class="read-time views">
+                            <box-icon class="attr" name='time-five'></box-icon>
+                            <p><span>{{ article.read_time }} min{{ article.read_time|pluralize }} read</span></p>
+                        </div>
+                        <div class="count-words views">
+                            <box-icon class="attr" name='book-content'></box-icon>
+                            <p><span>{{ article.count_words }} word{{ article.count_words|pluralize }}</span></p>
+                        </div>
+                        <div class="views">
+                            <img src="{% static 'images/icons/eye_60px.png' %}" alt="">
+                            <p> <span>{{ article.views }} view{{ article.views|pluralize }}</span></p>
+                        </div>
+                    </div>
+                    <div class="article-attr">
+                        <div class="channel-name actions">
+                            <a class="like-btn" data-href="{{article.get_api_like_url}}" data-likes="{{article.likes.count}}" href="{{article.get_like_url}}">
+                                {% if article.already_liked %}
+                                <box-icon name='like' type="solid" animation='tada-hover'></box-icon>
+                                {% else %}
+                                <box-icon name='like' animation='tada-hover'></box-icon>
+                                {% endif %}
+                            </a>
+                            <p class="likes-count">{{article.likes.count}}</p>
+                        </div>
+                        <div class="date-posted actions share-container">
+                            <box-icon class="share-btn" name='share-alt'></box-icon>
+                            <div class="social-share-container">
+                                <div onclick = 'cancelShare()' class="cancel-share"><box-icon name='x'></box-icon></div>
+                                {% post_to_facebook "Check out my story!" %}
+                                {% post_to_twitter "Check out my story!" '{{article.get_absolute_url}}' "Share on Twitter" %}
+                                {% post_to_gplus '{{article.get_absolute_url}}' "Share on Google+!" %}
+                                {% post_to_linkedin  '{{article.get_absolute_url}}' %}
+                                {% send_email "Check out my story!" '{{article.get_absolute_url}}' "Share via email" %}
+                                {% post_to_reddit "Check out my story!" '{{article.get_absolute_url}}' %}
+                                {% post_to_telegram "Check out my story!" '{{article.get_absolute_url}}' %}
+                                {% post_to_whatsapp "Check out my story!" "Share on WhatsApp" %}
+                                {% save_to_pinterest '{{article.get_absolute_url}}' %}
+                                {% add_pinterest_script %}
+                                {% copy_to_clipboard '{{article.get_absolute_url}}' "Copy to clipboard!" %}
+                                {% add_copy_script %}
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <box-icon name='bookmark'></box-icon>
+                        </div>
                     </div>
                 </div>
-                <div class="actions">
-                    <box-icon name='bookmark'></box-icon>
-                </div>
+                
             </div>
+            <div class="article-image">
+                <img src="{{article.feature_image.url}}" alt="">
+            </div>
+            <div class="article-body">
+                {{article.body}}
+            </div>
+
         </div>
-        
     </div>
-    <div class="article-image">
-        <img src="{{article.feature_image.url}}" alt="">
-    </div>
-    <div class="article-body">
-        {{article.body}}
-    </div>
-
 </div>
-
 
 {% endblock content %}
