--- a/ue_app/templates/main/base.html
+++ b/ue_app/templates/main/base.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="{% static 'css/main/base.css' %}">
         <link rel="stylesheet" href="{% static 'css/main/scrollbar.css' %}">
         <link rel="stylesheet" href="{% static 'css/main/tab.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main/media_screen.css' %}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,600;1,100;1,800&display=swap"
@@ -30,11 +31,7 @@
                     <div class="logo-menu nav-menu">
                         <a href="{% url 'ue_app:home' %}"><div class="logo">ue</div></a>
                         <div class="dropdown-menu icon-div">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                                class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M8.625 12a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                            </svg>
+                            <svg onclick="displayLeftAside()" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="transform: ;msFilter:;"><path d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
                         </div>
                     </div>
                     <div class="search-sign-in nav-menu">
@@ -107,6 +104,7 @@
                                 <div class="cancel-sign" onclick="cancelsignMenu()">
                                     <box-icon name='x'></box-icon>
                                 </div>
+                                {% if request.user.is_authenticated %}
                                 {% if user.account.photo.url %}
                                 <a href="{% url 'ue_app:profile_detail' user.username user.id %}">
                                     <div class="user-photo">
@@ -118,6 +116,7 @@
                                 </a>
                                 
                                 {% else %}
+                                
                                 <a href="{% url 'ue_app:profile_detail' user.username user.id %}">
                                     <div class="user-photo">
                                         <div class="user-avatar user-avatar-letter">
@@ -126,6 +125,8 @@
                                         <p>{{user.username}}</p>
                                     </div>
                                 </a>
+                                
+                                {% endif %}
                                 {% endif %}
                                 <hr>
                                 <div class="login sign-auth" style="margin-top: 15px;">
@@ -153,7 +154,9 @@
                     <div class="title">
                         <h3>Featured Channels</h3>
                         <div class="expand-colapse body-icon">
-                            <div class="place-horizontal remove-element"><box-icon name='move-horizontal'></box-icon></div>
+                            <div class="place-horizontal remove-element">
+                                <box-icon name='move-horizontal'></box-icon>
+                            </div>
                             <div class="collapse">
                                 <box-icon name='collapse-horizontal'></box-icon>
                             </div>
@@ -164,19 +167,21 @@
                         </div>
                     </div>
                 
-                    <div class="collapse-title-popup-tag remove-element">
-                        <box-icon name='tag-alt'></box-icon>
+                    <div class="collapse-title-popup-tag remove-element" onclick="removeLeftAside()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path></svg>
                     </div>
                 </div>
                 <div class="recommended-accounts">
+                    
                     {% if channels %}
-                    {% for account in channels %}
+                    {% for account in channels|slice:":10" %}
                     <div class="recommended-account-card">
                         <div class="photo-name">
                             <a href="{{account.get_absolute_url}}">
-                            <div class="account-image">
-                                <img data-title="Elliot Fu" data-content="Elliot has been a member since July 2012" class="ui avatar image" src="{{account.channel_logo.url}}" alt="">
-                            </div></a>
+                                <div class="account-image">
+                                    <img data-title="Elliot Fu" data-content="Elliot has been a member since July 2012" class="ui avatar image" src="{{account.channel_logo.url}}" alt="">
+                                </div>
+                            </a>
                             <div class="account-name">
                                 <p>{{account.display_name}}</p>
                             </div>
@@ -197,6 +202,7 @@
                     {% endif %}
                 </div>
             </div>
+            {% if user.is_authenticated %}
             <!-- <hr> -->
             <div class="recommended-videos">
                 <div class="recommended-channels-head">
@@ -205,8 +211,8 @@
                     </div>
                 </div>
                 <div class="popular-videos">
-                    {% if videos %}
-                    {% for video in videos %}
+                    {% if recommended_videos %}
+                    {% for video in recommended_videos|slice:":5" %}
                     <a href="{{video.get_absolute_url}}">
                         <div class="popular-video-card">
                             <div class="video-display">
@@ -216,7 +222,7 @@
                             </div>
                             <div class="video-status-views">
                                 <div class="video-title">
-                                    <h5>{{video.title}}</h5>
+                                    <h5>{{video.title|title}}</h5>
                                 </div>
                                 <div class="video-name-views">
                                     <div class="channel-name">
@@ -247,8 +253,8 @@
                     </div>
                 </div>
                 <div class="popular-videos">
-                    {% if audios %}
-                    {% for audio in audios %}
+                    {% if recommended_audios %}
+                    {% for audio in recommended_audios|slice:":5" %}
                     <a href="{{audio.get_absolute_url}}">
                         <div class="popular-video-card">
                         <div class="video-display">
@@ -291,7 +297,7 @@
                         </div>
                         <div class="video-status-views">
                             <div class="video-title">
-                                <h5>{{audio.title}}</h5>
+                                <h5>{{audio.title|title}}</h5>
                             </div>
                             <div class="video-name-views">
                                 <div class="channel-name">
@@ -322,8 +328,8 @@
                     </div>
                 </div>
                 <div class="popular-videos">
-                    {% if articles %}
-                    {% for article in articles %}
+                    {% if recommended_articles %}
+                    {% for article in recommended_articles|slice:":5" %}
                     <a href="{{article.get_absolute_url}}">
                         <div class="popular-video-card">
                             <div class="video-display">
@@ -334,7 +340,7 @@
                             </div>
                             <div class="video-status-views">
                                 <div class="video-title">
-                                    <h5>{{article.title}}</h5>
+                                    <h5>{{article.title|title}}</h5>
                                 </div>
                                 <div class="video-name-views">
                                     <div class="channel-name">
@@ -357,6 +363,7 @@
                     {% endif %}
                 </div>
             </div>
+            {% endif %}
         </div>
     {% endblock %}
 
@@ -400,7 +407,7 @@
                             <div class="category-card">
                                 <img src="{{category.image.url}}" alt="category.name">
                                 <div>
-                                    <h5>{{category.name}}</h5>
+                                    <h5>{{category.name|title}}</h5>
                                 </div>
                                 <p>470.5K views</p>
                             </div>
