--- a/ue_app/templates/main/profile_detail.html
+++ b/ue_app/templates/main/profile_detail.html
@@ -5,10 +5,9 @@
 
 {% endblock %}
 
-{% block content %}
-
 <div class="content-container">
     <div class="content-page">
+{% block content %}
         <div class="profile-page-container">
             <div class="profile-page-photo">
                 {% if user.account.photo.url %}
@@ -67,7 +66,10 @@
                             <img src="{{channel.channel_logo.url}}" alt="">
                         </div>
                         <div class="profile-channel-heading">
-                            <h5 class="channel-name">{{channel.display_name}}</h5>
+                            <a href="{{channel.get_absolute_url}}">
+                                <h5 class="channel-name">{{channel.display_name}}</h5>
+                            </a>
+                            {% if request.user.is_authenticated %}
                             <div class="delete-edit">
                                 <div class="delete-content">
                                     <svg class="{{channel.slug}}" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M261 936q-24 0-42-18t-18-42V306h-41v-60h188v-30h264v30h188v60h-41v570q0 24-18 42t-42 18H261Zm106-146h60V391h-60v399Zm166 0h60V391h-60v399Z"/></svg>
@@ -90,11 +92,13 @@
                                     </a>
                                 </div>
                             </div>
+                            {% endif %}
+
                         </div>
                         
                     </div>
                     <div class="channel-stats">
-                        <p><span>Date Created:</span> {{channel.date_created}}</p>
+                        <p><span>Date Created:</span> {{channel.date_created|date:"D M Y"}}</p>
                         <p><span>views:</span> 2k</p>
                         <p><span>Followers:</span> {{channel.follow.count}}</p>
                     </div>
@@ -103,6 +107,7 @@
                 {% endfor %}
             </div>
         </div>
-    </div>
-</div>
+
 {% endblock %}
+</div>
+</div>
