--- a/ue_app/templates/main/category_audio.html
+++ b/ue_app/templates/main/category_audio.html
@@ -6,68 +6,56 @@
 
         {% if categories %}
         {% for category in categories %}
-        {% if category_audio %}
-        {% for audio in category_audio %}
 
-        {% if audio.category.name == category.name %}
+        <div class="category-medium-container">
+            {% if category_audio %}
+            {% for audio in category_audio %}
+            {% if audio.category.name == category.name %}
 
-            <div class="content-title">
-                <h1>{{category.name|title}}</h1>
-            </div>
-                <!-- <div class="category-container-stats">
-                    <div class="category-image-container">
-                        <img src="{{category.image.url}}" alt="">
-                    </div>
-                    <div class="category-stats">
-                        {% comment %} Total Articles: <span>480</span>
-                        Total Audios: <span>480</span> {% endcomment %}
-                        <p>Total Videos: <span>480</span></p>
-                        <p>Total Views: <span>490.6K</span></p>
-                    </div>
-                </div> -->
+                {% comment %} <div class="content-title">
+                    <h1>{{category.name|title}}</h1>
+                </div> {% endcomment %}
 
-            <div class="popular-videos-card-tab-display">
-                <div class="popular-video-card">
-                    <div class="video-display">
-                        <div class="video-cover">
-                            <img src="{{audio.feature_image.url}}">
-                            <div class="audio-cover-1">
-                                <audio src="{{audio.audio_upload.url}}" controls></audio>
+                <div class="popular-videos-card-tab-display">
+                    <div class="popular-video-card">
+                        <div class="video-display">
+                            <div class="video-cover">
+                                <img src="{{audio.feature_image.url}}">
+                                <div class="audio-cover-1">
+                                    <audio src="{{audio.audio_upload.url}}" controls></audio>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="video-status-views">
-                        <div class="video-title">
-                            <h5>{{audio.title|title}}</h5>
-                        </div>
-                        <div class="video-name-views">
-                            <div class="channel-name">
-                                <img src="{{audio.author.photo.url}}" alt="">
-                                <p>{{audio.author.display_name}}</p>
+                        <div class="video-status-views">
+                            <div class="video-title">
+                                <h5>{{audio.title|title}}</h5>
                             </div>
-                            <div class="views">
-                                <p>12.6K</p>
+                            <div class="video-name-views">
+                                <div class="channel-name">
+                                    <img src="{{audio.author.channel_logo.url}}" alt="">
+                                    <p>{{audio.author.display_name}}</p>
+                                </div>
+                                <div class="views">
+                                    <p>12.6K</p>
+                                </div>
                             </div>
-                        </div>
 
+                        </div>
                     </div>
                 </div>
-            </div>
 
-        {% else %}
-        <p></p>
-        {% endif %}
-
-        {% endfor %}
-        {% else %}
-        <p></p>
-        {% endif %}
-
+            {% else %}
+            <p></p>
+            {% endif %}
+            {% endfor %}
+            {% else %}
+            <p></p>
+            {% endif %}
+        </div
         {% endfor %}
         {% else %}
         <p>No category available</p>
         {% endif %}
-
         {% endblock content %}
 
     </div>
