--- a/ue_app/templates/main/category_video.html
+++ b/ue_app/templates/main/category_video.html
@@ -7,49 +7,51 @@
 
         {% if categories %}
         {% for category in categories %}
-        {% if category_video %}
-        {% for video in category_video %}
 
-        {% if video.category.name == category.name %}
+        <div class="category-medium-container">
 
-            <div class="content-title">
-                <h1>{{category.name|title}}</h1>
-            </div>
+        
+            {% if category_video %}
+            {% for video in category_video %}
 
-            <div class="popular-videos-card-tab-display">
-                <div class="popular-video-card">
-                    <div class="video-display">
-                        <div class="video-cover">
-                            <video src="{{video.video_upload.url}}" controls></video>
-                        </div>
-                    </div>
-                    <div class="video-status-views">
-                        <div class="video-title">
-                            <h5>{{video.title|title}}</h5>
-                        </div>
-                        <div class="video-name-views">
-                            <div class="channel-name">
-                                <img src="{{video.author.photo.url}}" alt="">
-                                <p>{{video.author.display_name}}</p>
-                            </div>
-                            <div class="views">
-                                <p>12.6K</p>
+            {% if video.category.name == category.name %}
+                {% comment %} <div class="content-title">
+                    <h1>{{category.name|title}}</h1>
+                </div> {% endcomment %}
+                <div class="popular-videos-card-tab-display">
+                    <div class="popular-video-card">
+                        <div class="video-display">
+                            <div class="video-cover">
+                                <video src="{{video.video_upload.url}}" controls></video>
                             </div>
                         </div>
+                        <div class="video-status-views">
+                            <div class="video-title">
+                                <h5>{{video.title|title}}</h5>
+                            </div>
+                            <div class="video-name-views">
+                                <div class="channel-name">
+                                    <img src="{{video.author.channel_logo.url}}" alt="">
+                                    <p>{{video.author.display_name}}</p>
+                                </div>
+                                <div class="views">
+                                    <p>12.6K</p>
+                                </div>
+                            </div>
 
+                        </div>
                     </div>
                 </div>
-            </div>
 
-        {% else %}
-        <p></p>
-        {% endif %}
+            {% else %}
+            <p></p>
+            {% endif %}
 
-        {% endfor %}
-        {% else %}
-        <p></p>
-        {% endif %}
-
+            {% endfor %}
+            {% else %}
+            <p></p>
+            {% endif %}
+        </div>
         {% endfor %}
         {% else %}
         <p>No category available</p>
